--- a/scenario.toml
+++ b/scenario.toml
@@ -1,19 +1,19 @@
 [green_agent]
 agentbeats_id = "019ab9d3-797b-7490-b5e1-d7ed6226e311"
 image = "ghcr.io/komyo-ai/agentbeats-tutorial-debate-judge:latest"
-env = { GOOGLE_GENAI_USE_VERTEXAI=FALSE, GOOGLE_API_KEY = "${GOOGLE_API_KEY}", LOG_LEVEL = "INFO" }
+env = { GOOGLE_GENAI_USE_VERTEXAI="FALSE", GOOGLE_API_KEY = "${GOOGLE_API_KEY}", LOG_LEVEL = "INFO" }
 
 [[participants]]
 agentbeats_id = "019abee6-6e45-79a1-a09c-8ca8f622cf3a"
 name = "pro"
 image = "ghcr.io/komyo-ai/agentbeats-tutorial-debater:latest"
-env = { GOOGLE_GENAI_USE_VERTEXAI=FALSE, GOOGLE_API_KEY = "${GOOGLE_API_KEY}", LOG_LEVEL = "INFO" }
+env = { GOOGLE_GENAI_USE_VERTEXAI="FALSE", GOOGLE_API_KEY = "${GOOGLE_API_KEY}", LOG_LEVEL = "INFO" }
 
 [[participants]]
-agentbeats_id = "019abee6-6e45-79a1-a09c-8ca8f622cf3a"
+agentbeats_id = "019abeeb-2c07-7af1-91dc-8bc2e8e45ed9"
 name = "antipro"
 image = "ghcr.io/komyo-ai/agentbeats-tutorial-debater:latest"
-env = { GOOGLE_GENAI_USE_VERTEXAI=FALSE, GOOGLE_API_KEY = "${GOOGLE_API_KEY}", LOG_LEVEL = "INFO" }
+env = { GOOGLE_GENAI_USE_VERTEXAI="FALSE", GOOGLE_API_KEY = "${GOOGLE_API_KEY}", LOG_LEVEL = "INFO" }
 
 [config]
 topic = "Is Lebron James the greatest basketball player of all time?"
